apps/app-python/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  namespace: dev 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: 192.168.15.210:5000/app-homelab-python:v1.0.20
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
  namespace: dev 
spec:
  type: ClusterIP # Alinhado às boas práticas (seguro e interno)
  ports:
  - port: 80       # Porta interna do serviço
    targetPort: 5000 # Porta do contêiner Python
  selector:
    app: python-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # 1. Desativa o redirecionamento forçado nativo do Ingress para HTTPS local
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    # 2. Permite que o Ingress reconheça os cabeçalhos de TLS terminados na Cloudflare
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  ingressClassName: public # Define que usará o Ingress do MicroK8s
  rules:
  - host: app.devtechdojo.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-app-service # Aponta para o seu serviço acima
            port:
              number: 80
